# Rust_Crypto_Trading

./: Cargo.toml  build.rs  config.yml
src/: config.rs  lib.rs  main.rs  routes.rs
src/coingecko/: coingecko_client.rs  entities.rs  mod.rs
src/db/: mod.rs  models.rs
src/db/mongodb/: mod.rs  transactions.rs  users.rs
src/db/traits/: error.rs  mod.rs  transactions.rs  users.rs
src/handlers/: currencies.rs  entities.rs  health.rs  mod.rs  transactions.rs  users.rs  utils.rs
